<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>64.0.211</version>
  </parent>

  <groupId>org.sonarsource.javascript</groupId>
  <artifactId>javascript</artifactId>
  <version>9.11.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>SonarJS</name>
  <description>SonarQube JavaScript/TypeScript/CSS Analyzer</description>
  <inceptionYear>2011</inceptionYear>
  <organization>
    <name>SonarSource and Eriks Nukis</name>
  </organization>
  <licenses>
    <license>
      <name>GNU LGPL 3</name>
      <url>http://www.gnu.org/licenses/lgpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <modules>
    <module>javascript-checks</module>
    <module>sonar-javascript-plugin</module>
    <module>eslint-bridge</module>
    <module>nodejs-utils</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:SonarSource/sonar-javascript.git</connection>
    <developerConnection>scm:git:git@github.com:SonarSource/sonar-javascript.git</developerConnection>
    <url>https://github.com/SonarSource/sonar-javascript</url>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <url>https://github.com/SonarSource/sonar-javascript/issues</url>
  </issueManagement>

  <properties>
    <!--  this is necessary because of drop of modules  -->
    <sonar.testExecutionReportPaths>eslint-bridge/test-report.xml</sonar.testExecutionReportPaths>

    <gitRepositoryName>SonarJS</gitRepositoryName>
    <license.title>SonarQube JavaScript Plugin</license.title>
    <sonarQubeMinVersion>8.9</sonarQubeMinVersion>

    <!-- override sonar-packaging plugin version from parent -->
    <version.sonar-packaging.plugin>1.20.0.405</version.sonar-packaging.plugin>
    <assertj.version>3.16.1</assertj.version>
    <jgit.version>6.2.0.202206071550-r</jgit.version>
    <junit.version>5.8.1</junit.version>
    <mockito.version>3.5.0</mockito.version>
    <slf4j.version>1.7.21</slf4j.version>
    <sonar.version>9.6.1.59531</sonar.version>
    <sonar.api.version>9.10.0.269</sonar.api.version>
    <sonar-orchestrator.version>3.35.0.2707</sonar-orchestrator.version>
    <sonarlint.version>8.10.0.56343</sonarlint.version>
    <gson.version>2.8.9</gson.version>
    <analyzer-commons.version>2.0.0.1075</analyzer-commons.version>
    <sslr.version>1.22</sslr.version>
    <sonarlint.plugin.api.version>8.9.0.54830</sonarlint.plugin.api.version>

    <artifactsToPublish>${project.groupId}:sonar-javascript-plugin:jar</artifactsToPublish>
    <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
    <maven.compiler.release>11</maven.compiler.release>
    <jdk.min.version>11</jdk.min.version>
    <version.surefire.plugin>3.0.0-M7</version.surefire.plugin>

    <!-- FIXME fix javadoc errors -->
    <doclint>none</doclint>
  </properties>

  <dependencyManagement>
    <dependencies>

      <!-- Default dependencies (compile) -->
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>javascript-checks</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>nodejs-utils</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>sonar-analyzer-commons</artifactId>
        <version>${analyzer-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>${gson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>1.3.9</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>1.21</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.11.0</version>
      </dependency>
      <dependency>
          <groupId>org.sonarsource.sslr</groupId>
          <artifactId>sslr-core</artifactId>
          <version>${sslr.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarlint.core</groupId>
        <artifactId>sonarlint-plugin-api</artifactId>
        <version>${sonarlint.plugin.api.version}</version>
        <scope>provided</scope>
      </dependency>


      <!-- Test dependencies -->
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jgit</groupId>
        <artifactId>org.eclipse.jgit</artifactId>
        <version>${jgit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarlint.core</groupId>
        <artifactId>sonarlint-core</artifactId>
        <version>${sonarlint.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.orchestrator</groupId>
        <artifactId>sonar-orchestrator</artifactId>
        <version>${sonar-orchestrator.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-ws</artifactId>
        <version>${sonar.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.awaitility</groupId>
        <artifactId>awaitility</artifactId>
        <version>4.0.3</version>
        <scope>test</scope>
      </dependency>

      <!-- Provided dependencies -->
      <dependency>
        <groupId>org.sonarsource.api.plugin</groupId>
        <artifactId>sonar-plugin-api</artifactId>
        <version>${sonar.api.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-plugin-api-impl</artifactId>
        <version>${sonar.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.javascript</groupId>
        <artifactId>sonar-javascript-plugin</artifactId>
        <type>sonar-plugin</type>
        <version>${project.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
        <scope>provided</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.6.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>its</id>
      <modules>
        <module>its</module>
      </modules>
    </profile>
  </profiles>

</project>
